# body-models-viser

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
body_models_viser/: __init__.py  _body_model.py  _client_autobuild.py  _rigid_body.py  _runtime.py  _skeleton.py  _viser.py
client/: package-lock.json  package.json  tsconfig.json
client/schema/: skinning.schema.json
client/src/: generatedTypes.ts  index.ts
client/test/: body-models-viser.test.ts
fixtures/anny/: rest.json  shape_pose.json  translation.json
fixtures/garment/: rest.json  shape_pose.json  translation.json
fixtures/mhr/: rest.json  shape_pose.json  translation.json
fixtures/smpl/: rest.json  shape_pose.json  translation.json
fixtures/smplh/: rest.json  shape_pose.json  translation.json
fixtures/smplx/: rest.json  shape_pose.json  translation.json
fixtures/soma/: rest.json  shape_pose.json  translation.json
plans/: 001-characterization-tests.md  002-fix-transform-replay-loss.md  003-pin-viser-private-api.md  004-quarantine-viser-runtime.md  005-declarative-model-adapters.md  006-naming-and-cleanups.md  README.md
scripts/: check_model_parity.py  check_smpl_parity.py  compare_viser_plugins.py  generate_reference.py  generate_typescript_types.py  stress_smplx.py  visualize_models.py
src/: anny.rs  garment.rs  lib.rs  main.rs  math.rs  mhr.rs  skin.rs  smpl.rs  soma.rs  types.rs
tests/: conftest.py  parity.rs  test_body_model.py  test_rigid_body.py  test_runtime.py  test_serializer.py
