[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "body-models-viser"
version = "0.0.2"
description = "Browser-side body model evaluation for viser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "body-models",
  "jaxtyping",
  "numpy",
  "viser",
]

[tool.hatch.build]
ignore-vcs = true
exclude = [
  "/client/node_modules",
  "/client/src",
  "/client/test",
  "/generated",
  "/target",
]

[tool.hatch.build.targets.sdist]
only-include = [
  "body_models_viser",
  "client/dist/body-models-viser.js",
  "client/schema/skinning.schema.json",
  "client/src",
  "client/package.json",
  "client/package-lock.json",
  "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["body_models_viser"]
force-include = { "client/dist/body-models-viser.js" = "body_models_viser/client/body-models-viser.js" }
