[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "body-models-viser"
version = "0.3.4"
description = "Browser-side body model evaluation for viser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "body-models>=0.18.1",
  "jaxtyping",
  "nodeenv",
  "numpy",
  "viser>=1.0.29,<1.1",
]

[tool.hatch.build]
ignore-vcs = true
exclude = [
  "/client/node_modules",
  "/client/src",
  "/target",
]

[tool.hatch.build.targets.sdist]
only-include = [
  "body_models_viser",
  "Cargo.lock",
  "Cargo.toml",
  "client/dist/body-models-viser.js",
  "client/dist/body-models-viser.wasm",
  "client/src",
  "client/package.json",
  "client/package-lock.json",
  "client/tsconfig.json",
  "README.md",
  "src",
]

[tool.hatch.build.targets.wheel]
packages = ["body_models_viser"]

[dependency-groups]
dev = [
    "pytest>=8",
    "wasmtime>=45.0.0",
]
